org.mmisw.iserver 
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13

2009-05-31
	- Util.getEntities(OntologyInfo ontologyInfo, OntModel ontModel): assign ClassInfo object 
	  corresponding to the domain of each property so it's easier to get associated attributes. 
	  
	- Many changes for including editing and creation of new version of a vocabulary ontology
	
2009-05-25
	- Support to handle different types of ontology data: vocabulary, mapping, and other, although
	  this is based on some heuristics; a better mechanism should be implemented (idea is to use
	  a particular ontology metadata property that indicates the type of ontology, for example
	  omv:usedOntologyEngineeringTool.
	
	
2009-05-24
	- getAllOntologies now return only the latest versions of all ontologies as the main entries
	  of the list; and, optionally, the prior versiones will be included in the internal property
	  priorVersions.
	  
	  
2009-05-23
	- included most of metadata management here (from ontmd module)

2009-05-22
	- Added username attribute to OntologyInfo
	
	- Added service getEntities(String ontologyUri), which btw facilitates current refactoring. 
	 
2009-05-13
	Module extracted from vine prototype. The goal is to unify the various operations to the
	server through this module.
	Note: this module provides the serializable objects required for the communication and
	a set of core types to be used on the server side.
	
	This is initially to be used by OntMd to provide the "portal" interface. Later,
	vine itself will be integrated.